--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.codesgood:justifiedtextview:1.0.2'
+    implementation 'com.android.support:design:28.0.0'
+
 }
