--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:theme="@style/AppTheme" android:name=".ActivityAsmaulHusna" />
+        <activity android:theme="@style/AppTheme.NoActionBar" android:name=".ActivityAsmaulHusnaDetail" />
     </application>
 
 </manifest>
